# sync-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.postgres.yml  docker-compose.yml
.github/workflows/: publish-docker-image.yml
migrations/2026-04-21-192255-0000_init/: down.sql  up.sql
src/: database.rs  dto.rs  handlers.rs  main.rs  models.rs  schema.rs  util.rs  validation.rs
src/database/: account.rs  channel.rs  playlist.rs  subscription.rs  user.rs  video.rs
src/handlers/: health.rs  playlists.rs  subscriptions.rs  user.rs
