[package]
name = "libretube-sync"
version = "0.1.0"
edition = "2024"
description = "Server to sync user data (subscriptions, playlists, ...) between devices, written for LibreTube"
license = "AGPL-3.0-or-later"

[dependencies]
# Web server
actix-web = "4.13"

# OpenAPI Docs
utoipa = { version = "5.4", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-scalar = { version = "0.3", features = ["actix-web"] }

# Database
diesel = { version = "2.3" }
diesel-async = { version = "0.8", features = [
  "async-connection-wrapper",
  "bb8",
  "migrations"
] }
diesel_migrations = { version = "2.3" }
uuid = { version = "1", features = ["serde", "v7"] }

# Logging
dotenvor = "0.2.0"
env_logger = "0.11.10"
log = "0.4"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Password hashing and username anonymization
argon2 = { version = "0.5.3", features = ["std"] }
hmac = "0.13"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
sha2 = "0.11.0"

[features]
default = ["sqlite"]
# default = ["postgres"]
postgres = ["diesel-async/postgres"]
sqlite = ["diesel-async/sqlite", "diesel/returning_clauses_for_sqlite_3_35"]
